<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/new_folder"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/enter_the_folder_name" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:layout_below="@id/subtitle"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_below="@id/edit_text"
        android:theme="@style/Divider" />

    <TextView
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_margin="8dp"
        android:layout_toLeftOf="@id/middle"
        android:layout_toStartOf="@id/middle"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/middle"
        android:layout_toEndOf="@id/middle"
        android:text="@string/save" />

</RelativeLayout>